Add HomeType and HomeStatus Enum and update related classes